--- a/aircnc/src/main/resources/mail-templates/trip-template.html
+++ b/aircnc/src/main/resources/mail-templates/trip-template.html
@@ -3,15 +3,15 @@
 <div style='margin:100px;'></div>
 <h1> 안녕하세요 AirCnC 입니다. </h1>
 <br>
-<p th:text="|숙소가 ${behavior} 되었습니다.|">
+<p th:text="|여행이 ${behavior} 되었습니다.|">
   <br>
 <p>감사합니다!
   <br>
 <div text-align='center' style='border:1px solid black; font-family:verdana,serif'></div>
-<h3 style='color:blue;'> 숙소 상세 정보</h3>
+<h3 style='color:blue;'> 여행 상세 정보</h3>
 <div style='font-size:130%'>
-  <strong th:text="|숙소이름 : ${name}|"></strong><br>
-  <strong th:text="|주소 : ${address}|"></strong><br>
-  <strong th:text="|1박당 가격 : ${pricePerDay}|"></strong><br>
+  <strong th:text="|여행기간 : ${checkIn + '~' + checkOut}|"></strong><br>
+  <strong th:text="|총 가격 : ${totalPrice}|"></strong><br>
+  <strong th:text="|인원 수 : ${headCount}|"></strong><br>
 </div>
 </html>
