--- a/aircnc/src/main/resources/mail-templates/room-delete.html
+++ b/aircnc/src/main/resources/mail-templates/room-delete.html
@@ -3,8 +3,8 @@
 <div style='margin:100px;'></div>
 <h1> 안녕하세요 AirCnC 입니다. </h1>
 <br>
-<p th:text="|숙소가 ${behavior} 되었습니다.|">
-  <br>
+<p>숙소가 삭제 되었습니다.</p>
+<br>
 <p>감사합니다!
   <br>
 <div text-align='center' style='border:1px solid black; font-family:verdana,serif'></div>
